# Picsart-academy

./: README.md  main.cpp  utils.cpp  utils.hpp
Classworks/: Makefile
Classworks/Jul_17/: Makefile  classwork  homework  main.cpp
Classworks/Jul_27/: Makefile  classwork  main.cpp
Classworks/Jul_28/: a.out  main.cpp
Classworks/Jul_3/: Makefile  main  main.cpp
Classworks/Jul_8/: .main.cpp.swp  homework  main.cpp
Classworks/Sep_1/: Makefile  homework
Classworks/Sep_1/includes/: Matrix.h
Classworks/Sep_1/src/: Matrix.cpp  main.cpp
Classworks/Sep_4/: README.md
Classworks/Sep_4/Shapes/: CMakeLists.txt
Classworks/Sep_4/Shapes/includes/: Circle.h  Shape.h  Square.h  Triangle.h
Classworks/Sep_4/Shapes/src/: Circle.cpp  Shape.cpp  Square.cpp  Triangle.cpp  main.cpp
Classworks/Snak_2D/: main.cpp
Homework_June_13/: homework  utils.cpp  utils.hpp
Homeworks/Foundation/Homework_Jul_1/: Makefile
Homeworks/Homework_Jul_1/: homework  main.cpp  utils.cpp  utils.hpp
Homeworks/Homework_Jul_10/: main.cpp  utils.cpp
Homeworks/Homework_Jul_10/src/: main.cpp
Homeworks/Homework_Jul_12/: homework  main.cpp  utils.cpp
Homeworks/Homework_Jul_15/: homework  main.cpp  utils.cpp  utils.h
Homeworks/Homework_Jul_17/: a.out  utils.h
Homeworks/Homework_Jul_19/: Makefile  main.cpp  utils.cpp  utils.h
Homeworks/Homework_Jul_24/: utils.cpp  utils.h
Homeworks/Homework_Jul_3/: homework  main.cpp  utils.cpp
Homeworks/Homework_Jul_5/: Makefile  a.out  homework  main.cpp  utils.hpp
Homeworks/Homework_June_14/: homework  utils.cpp  utils.hpp
(+32 files in other folders)
